[metadata]
name = aiohndchain-nobwow
version = 1.0.1
author = NobWow
author_email = pashok15789@gmail.com
description = Tiny package for better asyncio event handling
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://github.com/NobWow/python-aiohandlerchain
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src
